@@ -1,3 +1,8 @@
+2002-03-09  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSDistributedNotificationCentre.m: Try alternative name for
+	server if NSHost is specified ...in case it is running on another host.
+
 Sat Mar  9 12:02:45 2002  Adam Fedor  <fedor@yogi.doc.com>
 
 	* configure.in: Change constant string to FooConstantString
